[package]
name = "chat-app"
version = "0.1.0"
authors = ["Hasan Ali <hasanhaja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hello"
path = "src/lib.rs"

[[bin]]
name = "hellobin"
path = "src/bin/main.rs"

[dependencies]
